licenses(["notice"])

load("//third_party:tools/pybind.bzl", "pybind_py_library")

filegroup(
    name = "srcs",
    srcs = [
        ":pybind_srcs",
        "//dbg/compare:srcs",
        "//dbg/peval:srcs",
        "//dbg/print:srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "pybind_srcs",
    srcs = glob(["python/*.cpp"]),
)

######### LIBRARIES #########

pybind_py_library(
    name = "compare_py",
    cc_srcs = ["python/compare.cpp"],
    cc_deps = [
        "//dbg/compare:compare",
        "//tenncor:tenncor",
    ],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)

pybind_py_library(
    name = "print_py",
    cc_srcs = ["python/print.cpp"],
    cc_deps = [
        "//dbg/print:print",
        "//tenncor:tenncor",
    ],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)

pybind_py_library(
    name = "peval_py",
    cc_srcs = ["python/peval.cpp"],
    cc_deps = [
        "//dbg/peval:gemit_plugin",
        "//dbg/peval:stats_plugin",
        "//tenncor:tenncor",
    ],
    py_deps = ["//tenncor:tenncor_py"],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)

pybind_py_library(
    name = "tenncor_profile_py",
    cc_srcs = ["python/profile.cpp"],
    cc_deps = [
        "//dbg/profile:profile",
        "//tenncor:tenncor",
    ],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)
