licenses(["notice"])

load("//third_party:tools/protobuf.bzl", "cc_proto_library")
# load("//third_party:tools/pybind.bzl", "pybind_py_library")

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob([
        "*.hpp",
        "src/*.cpp",
    ]) + ["BUILD.bazel"],
)

filegroup(
    name = "test_srcs",
    srcs = glob([
        "test/*.hpp",
        "test/*.cpp",
    ]),
    visibility = ["//visibility:private"],
)

######### LIBRARY #########

cc_library(
    name = "distrib",
    hdrs = glob(["*.hpp"]),
    srcs = glob(["src/*.cpp"]),
    copts = ["-std=c++17"],
    deps = [
        "//teq:teq",
        "//eigen:eigen",
        "//distrib:distr_cc_grpc",
        "@boost//:uuid",
        "@boost//:bimap",
        "@com_github_oliora_ppconsul//:consul",
    ],
)

proto_library(
    name = "distr_proto",
    srcs = ["distr.proto"],
)

cc_proto_library(
    name = "distr_cc_grpc",
    srcs = ["distr.proto"],
    copts = ["-std=c++17"],
    with_service = True,
)

######### TEST #########

cc_test(
    name = "test",
    srcs = ["//distrib:test_srcs"],
    copts = ["-std=c++17"],
    deps = [
        "//distrib:distrib",
        "//:tenncor",
        "@gtest//:gtest",
        "@com_github_mingkaic_cppkg//exam:exam",
    ],
    linkstatic = True,
)
