licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = [
        ":egen_srcs",
        "BUILD.bazel",
    ],
)

filegroup(
    name = "egen_srcs",
    srcs = glob(["egen.py", "plugins/*.py"]),
)

######### FILE GENERATION #########

py_binary(
    name = "egen",
    srcs = [":egen_srcs"],
    deps = ["//gen:gen"],
)
