licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = [
        ":egrpc_hdrs",
        # ":egrpc_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "egrpc_hdrs",
    srcs = glob(["*.hpp"]),
)

# filegroup(
#     name = "egrpc_srcs",
#     srcs = glob([
#         "src/*.cpp",
#     ]),
# )

######### LIBRARY #########

cc_library(
    name = "egrpc",
    hdrs = [":egrpc_hdrs"],
    # srcs = [":egrpc_srcs"],
    copts = ["-std=c++17"],
    deps = ["//global:global", "@com_github_grpc_grpc//:grpc++"],
    visibility = ["//visibility:public"],
)
