licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = glob([
        "*.hpp",
        "src/*.cpp",
    ]) + ["BUILD.bazel"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "ctest_srcs",
    srcs = glob([
        "test/*.hpp",
        "test/*.cpp",
    ]),
)

filegroup(
    name = "ptest_srcs",
    srcs = glob([
        "test/*.py",
    ]),
)

filegroup(
    name = "benchmark_srcs",
    srcs = glob([
        "bm/*.hpp",
        "bm/*.cpp",
    ]),
)

######### LIBRARY #########

cc_library(
    name = "eteq",
    hdrs = glob(["*.hpp"]),
    srcs = glob(["src/*.cpp"]),
    copts = ["-std=c++17"],
    deps = [
        "//eigen:eigen",
        "//opt:opt",
        "//onnx:onnx",
        "@boost//:uuid",
    ],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "ctest",
    srcs = ["//eteq:ctest_srcs"],
    copts = ["-std=c++17"],
    deps = [
        "//:tenncor",
        "//dbg:print",
        "//utils:utils",
        "//testutil:tutil",
        "@gtest//:gtest",
        "@com_github_mingkaic_cppkg//diff:diff",
        "@com_github_mingkaic_cppkg//exam:exam",
    ],
    linkstatic = True,
    data = [
        "//:test_models",
        "//cfg:optimizations",
    ],
)

py_test(
    name = "ptest",
    srcs = ["//eteq:ptest_srcs"],
    deps = [
        "//:tenncor_py",
        "//testutil:pyunit_util",
    ],
    data = ["//testutil:ead_testcase_template"],
)

######### BENCHMARK #########

cc_binary(
    name = "benchmark",
    srcs = ["bm/benchmark.cpp"],
    deps = [
        "//:tenncor",
        "@com_github_google_benchmark//:benchmark",
    ],
    copts = ["-std=c++17"],
    data = ["//cfg:optimizations"],
)
