licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = [
        ":eteq_hdrs",
        ":eteq_srcs",
        ":ctest_srcs",
        ":ptest_srcs",
        ":benchmark_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "eteq_hdrs",
    srcs = glob(["*.hpp"]),
)

filegroup(
    name = "eteq_srcs",
    srcs = glob(["src/*.cpp"]),
)

filegroup(
    name = "ctest_srcs",
    srcs = glob(["test/*.cpp"]),
)

filegroup(
    name = "ptest_srcs",
    srcs = ["test/ptest.py"],
)

filegroup(
    name = "benchmark_srcs",
    srcs = glob(["bm/*.cpp"]),
)

######### LIBRARY #########

cc_library(
    name = "eteq",
    hdrs = [":eteq_hdrs"],
    srcs = [":eteq_srcs"],
    copts = ["-std=c++17"],
    deps = [
        "//opt:opt",
        "//onnx:onnx",
    ],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "ctest",
    srcs = [":ctest_srcs"],
    copts = ["-std=c++17"],
    deps = [
        "//:tenncor",
        "//utils:utils",
        "//testutil:tutil",
        "@com_github_mingkaic_cppkg//diff:diff",
        "@com_github_mingkaic_cppkg//exam:exam",
    ],
    linkstatic = True,
    data = [
        "//:test_models",
        "//cfg:optimizations",
    ],
    size = "enormous",
)

py_test(
    name = "ptest",
    srcs = [":ptest_srcs"],
    deps = [
        "//:tenncor_py",
        "//testutil:pyunit_util",
    ],
    data = [
        "//:test_models",
        "//testutil:ead_testcase_template",
    ],
)

######### BENCHMARK #########

cc_binary(
    name = "benchmark",
    srcs = [":benchmark_srcs"],
    deps = [
        "//:tenncor",
        "@com_github_google_benchmark//:benchmark",
    ],
    copts = ["-std=c++17"],
    data = ["//cfg:optimizations"],
)
