licenses(["notice"])

load("@rules_proto_grpc//python:defs.bzl", "python_proto_library")

filegroup(
    name = "srcs",
    srcs = [
        ":extenncor_srcs",
        ":protos",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "extenncor_srcs",
    srcs = [
        "dqn_trainer.py",
        "embed.py",
        "tfds_trainer.py",
        "trainer_cache.py",
    ],
)

filegroup(
    name = "protos",
    srcs = glob(["*.proto"]),
)

######### LIBRARY #########

py_library(
    name = "extenncor",
    srcs = [":extenncor_srcs"],
    deps = [
        ":extenncor_py_pb",
        "//tenncor:tenncor_py",
    ],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "extenncor_pb",
    srcs = [":protos"],
    visibility = ["//visibility:public"],
)

# python_proto_library(
#     name = "extenncor_py_pb",
#     deps = [":extenncor_pb"],
#     visibility = ["//visibility:public"],
# )

py_library(
    name = "extenncor_py_pb",
    srcs = [
        "dataset_pb2.py",
        "dqn_trainer_pb2.py",
    ],
)
