licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = [
        ":layr_hdrs",
        ":layr_srcs",
        ":ctest_srcs",
        ":ptest_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "layr_hdrs",
    srcs = glob(["*.hpp"]),
)

filegroup(
    name = "layr_srcs",
    srcs = glob(["src/*.cpp"]),
)

filegroup(
    name = "ctest_srcs",
    srcs = glob(["test/*.cpp"]),
)

filegroup(
    name = "ptest_srcs",
    srcs = ["test/ptest.py"],
)

######### LIBRARY #########

cc_library(
    name = "layr",
    hdrs = [":layr_hdrs"],
    srcs = [":layr_srcs"],
    copts = ["-std=c++17"],
    deps = ["//eteq:eteq"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "ctest",
    srcs = [":ctest_srcs"],
    copts = ["-std=c++17"],
    deps = [
        "//:tenncor",
        "//testutil:tutil",
        "@com_github_mingkaic_cppkg//diff:diff",
    ],
    linkstatic = True,
)

py_test(
    name = "ptest",
    srcs = [":ptest_srcs"],
    deps = [
        "//:tenncor_py",
        "//dbg:print_py",
    ],
)
