licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob([
        "*.hpp",
        "src/*.cpp",
    ]) + ["BUILD.bazel"],
)

filegroup(
    name = "test_srcs",
    srcs = glob([
        "test/**/*.hpp",
        "test/**/*.cpp",
    ]),
)

######### LIBRARY #########

cc_library(
    name = "llo",
    hdrs = glob(["*.hpp"]),
    srcs = glob(["src/*.cpp"]),
    copts = ["-std=c++14"],
    deps = ["//ade:ade"],
)

######### TEST #########

cc_test(
    name = "test_llo",
    size = "medium",
    srcs = glob(["test/dynamic/*"]),
    copts = ["-std=c++14"],
    deps = [
        "//llo:llo",
        "//testutil:testutil",
    ],
    data = ["//:credentials"],
)

cc_test(
    name = "test_regress",
    size = "medium",
    srcs = glob(["test/regress/*"]),
    copts = ["-std=c++14"],
    deps = [
        "//llo:llo",
        "//testutil:testutil",
        "@com_github_mingkaic_testify//anteroc:anteroc",
    ],
    data = ["//:credentials"],
)
